[gd_scene load_steps=3 format=3 uid="uid://b77asnldqt0xe"]

[ext_resource type="Script" path="res://scripts/ui/combat/BattleScene.gd" id="1_ltshs"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_stage"]
bg_color = Color(0.1, 0.1, 0.12, 1)
border_width_bottom = 4
border_color = Color(0.2, 0.2, 0.25, 1)
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="BattleScene" type="Node2D"]
script = ExtResource("1_ltshs")

[node name="DialogOverlay" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="BG" type="ColorRect" parent="DialogOverlay"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.05, 0.07, 0.95)

[node name="VBox" type="VBoxContainer" parent="DialogOverlay"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="RoomTitle" type="Label" parent="DialogOverlay/VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Room Name"
horizontal_alignment = 1

[node name="DialogText" type="Label" parent="DialogOverlay/VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/line_spacing = 5
text = "The sentry rattles its bones..."
horizontal_alignment = 1
autowrap_mode = 3

[node name="OptionContainer" type="VBoxContainer" parent="DialogOverlay/VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 10

[node name="UI" type="CanvasLayer" parent="."]
unique_name_in_owner = true

[node name="SafeZone" type="MarginContainer" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="MainLayout" type="VBoxContainer" parent="UI/SafeZone"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TopHalf_Environment" type="PanelContainer" parent="UI/SafeZone/MainLayout"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_stage")

[node name="HBox" type="HBoxContainer" parent="UI/SafeZone/MainLayout/TopHalf_Environment"]
layout_mode = 2
alignment = 1

[node name="PlayerPortrait" type="VBoxContainer" parent="UI/SafeZone/MainLayout/TopHalf_Environment/HBox"]
layout_mode = 2
alignment = 2

[node name="PlayerHP" type="Label" parent="UI/SafeZone/MainLayout/TopHalf_Environment/HBox/PlayerPortrait"]
unique_name_in_owner = true
layout_mode = 2
text = "HP: 100/100"
horizontal_alignment = 1

[node name="Box" type="Panel" parent="UI/SafeZone/MainLayout/TopHalf_Environment/HBox/PlayerPortrait"]
custom_minimum_size = Vector2(140, 160)
layout_mode = 2

[node name="PlayerPortraitSprite" type="TextureRect" parent="UI/SafeZone/MainLayout/TopHalf_Environment/HBox/PlayerPortrait/Box"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="PlayerFlash" type="ColorRect" parent="UI/SafeZone/MainLayout/TopHalf_Environment/HBox/PlayerPortrait/Box"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="EnemyPortrait" type="VBoxContainer" parent="UI/SafeZone/MainLayout/TopHalf_Environment/HBox"]
layout_mode = 2
alignment = 2

[node name="EnemyHP" type="Label" parent="UI/SafeZone/MainLayout/TopHalf_Environment/HBox/EnemyPortrait"]
unique_name_in_owner = true
layout_mode = 2
text = "HP: 50"
horizontal_alignment = 1

[node name="Box" type="Panel" parent="UI/SafeZone/MainLayout/TopHalf_Environment/HBox/EnemyPortrait"]
custom_minimum_size = Vector2(140, 160)
layout_mode = 2

[node name="EnemyPortraitSprite" type="TextureRect" parent="UI/SafeZone/MainLayout/TopHalf_Environment/HBox/EnemyPortrait/Box"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="EnemyFlash" type="ColorRect" parent="UI/SafeZone/MainLayout/TopHalf_Environment/HBox/EnemyPortrait/Box"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="BottomHalf_Split" type="HBoxContainer" parent="UI/SafeZone/MainLayout"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="LogSection" type="VBoxContainer" parent="UI/SafeZone/MainLayout/BottomHalf_Split"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LogBox" type="VBoxContainer" parent="UI/SafeZone/MainLayout/BottomHalf_Split/LogSection"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="UI/SafeZone/MainLayout/BottomHalf_Split"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.5
columns = 3

[node name="DebugControls" type="HBoxContainer" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_bottom = 40.0
grow_horizontal = 0

[node name="DebugWinBtn" type="Button" parent="UI/DebugControls"]
unique_name_in_owner = true
layout_mode = 2
text = "WIN"

[node name="DebugLoseBtn" type="Button" parent="UI/DebugControls"]
unique_name_in_owner = true
layout_mode = 2
text = "LOSE"